[pf-141] fix css to adjust text position for answers that are too long

--- a/mon-pix/app/styles/components/_challenge-response.scss
+++ b/mon-pix/app/styles/components/_challenge-response.scss
@@ -14,4 +14,6 @@
 .proposal-text {
   font-weight: $font-normal;
   width: 100%;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
 }
